Added logo & fixed styling

--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html lang="en-us">
 
 <head>
- <meta charset="UTF-8">
- <title> OC Chess </title>
- <link rel="stylesheet" href="styles.css">
- <meta name="keywords" content="Olympic College, Chess, Club">
- <meta name="viewport" content="width=device-width, intial-scale=1.0">
+    <meta charset="UTF-8">
+    <title> OC Chess </title>
+    <link rel="stylesheet" href="assets\css\styles.css">
+    <meta name="keywords" content="Olympic College, Chess, Club">
+    <meta name="viewport" content="width=device-width, intial-scale=1.0">
 </head>
 
 <header id="top">
- <h1 id="title"> Olympic College Chess Club </h1>
+    <img id="logo" src="assets\images\icon.svg">
+    <p> Olympic College Chess Club </p>
 </header>
 
 <body>
