Revert "fancy styling"
This reverts commit c2463f6262f293d4ec5a690796a78f0fe56f4252.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <title> OC Chess - Welcome! </title>
     <link rel="stylesheet" href="assets\css\front.css">
-    <script src="backgroundScroll.js"></script>
     <meta name="keywords" content="Olympic College, Chess, Club">
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
 </head>
@@ -23,8 +22,8 @@
    xmlns:svg="http://www.w3.org/2000/svg">
         <defs>
             <linearGradient id="Gradient" x1="0" x2="0.5" y1="0" y2="0.5">
-                <stop id="stop1" offset="0%" stop-color="#bebebe"/>
-                <stop id="stop2" offset="100%" stop-color="var(--mountain)"/>
+                <stop offset="0%" stop-color="#bebebe"/>
+                <stop offset="100%" stop-color="#3d3d3d"/>
               </linearGradient>
         </defs>
         <path
@@ -35,13 +34,12 @@
     <div id="title"> Olympic College Chess </div>
 </div>
 
-<div id="main">
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<!--div id="main">
     <h1> Welcome! </h1>
     <p>
         Hello and welcome to the unofficial hub and landing page for the Olympic College Chess Club!
     </p>
-</div>
+</div-->
 
 </body>
 </html>
