--- a/index.html
+++ b/index.html
@@ -37,12 +37,35 @@
 </div>
 
 <div id="main">
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <h1> Welcome! </h1>
     <p>
-        Hello and welcome to the unofficial hub and landing page for the Olympic College Chess Club!
+        Hello and welcome to the unofficial hub and landing page for the Olympic College Chess Club! Here you can find everything you need to know to get involved or learn more about our club.
+        <br><br>
+        This is a club located at, and supported by,
+        <a href="https://www.olympic.edu/">Olympic College</a>
+         and is dedicated to improving all participating members' skill at the game, as well as having fun! Some of our activities include bi-weekly online Rapid and Blitz tournaments on
+        <a href="https://lichess.org/">Lichess</a>,
+        weekly in-person casual Chess, weekly puzzles, and hopefully upcoming OTB tournaments!
+        <br><br>
+        If you are at all interested in communicating more with the community, please come and join our Discord and Lichess team using the links below!
     </p>
+    <br><br><br>
+    <div id="links">
+        <img src="assets/images/discord.svg" alt="Discord Logo" onclick="window.location='https://discord.gg/9DFTseybDy';">
+        <img src="assets/images/lichess.svg" alt="Lichess Logo" onclick="window.location='https://lichess.org/team/olympic-college-chess-club';">
+    </div>
 </div>
+<div id="main-to-footer"></div>
+
+
+<footer>
+    <p>
+        <a href="mailto: AbrahamEngebretson@student.olympic.edu"> Contact </a>
+    </p>
+    <p>
+        <a href="https://github.com/westerntoad/occhess"> View on Github </a>
+    </p>
+</footer>
 
 </body>
 </html>
