fixing css breakpoints for mobile

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets\css\front.css">
     <script src="assets/js/backgroundScroll.js"></script>
     <meta name="keywords" content="Olympic College, Chess, Club">
-    <meta name="viewport" content="width=device-width, intial-scale=1.0">
+    <meta name="viewport" content="width=device-width, intial-scale=1">
 </head>
 <body>
 
@@ -36,8 +36,17 @@
         <a href="https://www.olympic.edu/">Olympic College</a>
          and is dedicated to improving all participating members' skill at the game, as well as having fun! Some of our activities include bi-weekly online Rapid and Blitz tournaments on
         <a href="https://lichess.org/">Lichess</a>,
-        weekly in-person casual Chess, weekly puzzles, and hopefully upcoming OTB tournaments!
+        weekly in-person casual Chess, weekly puzzles, and hopefully upcoming OTB tournaments! Read below to find the current schedule for in-person and online events.
         <br><br>
+    </p>
+    <!--h2 style="color: #bababa"> Online Events </h2>
+    <table>
+        <tr>
+            <th>When</th>
+            <th></th>
+        </tr>
+    </table-->
+    <p>
         If you are at all interested in communicating more with the community, please come and join our Discord and Lichess team using the links below!
     </p>
     <br><br><br>
