sorted js and added schedule

--- a/index.html
+++ b/index.html
@@ -31,22 +31,55 @@
     <h1> Welcome! </h1>
     <p>
         Hello and welcome to the unofficial hub and landing page for the Olympic College Chess Club! Here you can find everything you need to know to get involved or learn more about our club.
-        <br><br>
+        <span style="display: block; padding-top: 0.5rem;"></span>
         This is a club located at, and supported by,
         <a href="https://www.olympic.edu/">Olympic College</a>
          and is dedicated to improving all participating members' skill at the game, as well as having fun! Some of our activities include bi-weekly online Rapid and Blitz tournaments on
         <a href="https://lichess.org/">Lichess</a>,
         weekly in-person casual Chess, weekly puzzles, and hopefully upcoming OTB tournaments! Read below to find the current schedule for in-person and online events.
-        <br><br>
+        <span class="note">
+            Currently, due to venue and officer difficulties, the club is only meeting for online events. Any and all members are encouraged to join up and play in-person games with other members, but currently there is no set weekly meeting time given by the club. This is a temporary measure, and have plans to meet in-person again soon.
+        </span>
     </p>
-    <!--h2 style="color: #bababa"> Online Events </h2>
-    <table>
-        <tr>
-            <th>When</th>
-            <th></th>
-        </tr>
-    </table-->
+    <br>
+    <div id="schedule">
+        <table id="online">
+            <tr>
+                <th colspan="2" style="border-bottom: 1px solid #8cbeff;"> Online </th>
+            </tr>
+            <tr style="font-weight: bold;">
+                <td style="padding-top: 0.5rem;"> Saturday Rapids </td>
+                <td style="padding-top: 0.5rem;"> Tuesday Blitz </td>
+            </tr>
+            <tr>
+                <td> Held Every Saturday </td>
+                <td> Held Every Tuesday </td>
+            </tr>
+            <tr>
+                <td> From 7:00pm-9:00pm </td>
+                <td> From 8:00pm-9:30pm </td>
+            </tr>
+            <tr>
+                <td> Game length of 10+5 </td>
+                <td> Game length of 5+0 </td>
+            </tr>
+        </table>
+        <table id="in-person">
+            <tr>
+                <th style="border-bottom: 1px solid #8cbeff;"> In-Person </th>
+            </tr>
+            <tr>
+                <td style="padding-top: 0.5rem;"> TBD </td>
+            </tr>
+            <tr><td> &nbsp; </td></tr>
+            <tr><td> &nbsp; </td></tr>
+            <tr><td> &nbsp; </td></tr>
+        </table>
+    </div>
+    <br><br>
     <p>
+        All online games joined through our Lichess team. If you are having any difficulties, there are instructions to join in the club Discord!
+        <span style="display: block; padding-top: 0.5rem;"></span>
         If you are at all interested in communicating more with the community, please come and join our Discord and Lichess team using the links below!
     </p>
     <br><br><br>
