--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title> OC Chess - Welcome! </title>
-    <!--link rel="icon" href="/assets/images/icon.svg"--> <!-- Need to convert svg to ico -->
-    <link rel="stylesheet" href="assets\css\front.css">
-    <script src="assets/js/backgroundScroll.js"></script>
+    <link rel="icon" type="image/png" href="/assets/images/icon.png">
+    <link rel="stylesheet" href="assets/css/landing.css">
+    <script src="assets/js/index.js"></script>
     <meta name="keywords" content="Olympic College, Chess, Club">
     <meta name="viewport" content="width=device-width, intial-scale=1">
 </head>
@@ -84,8 +84,8 @@
     </p>
     <br><br><br>
     <div id="links">
-        <img src="assets/images/discord.svg" alt="Discord Logo" onclick="window.location='https://discord.gg/9DFTseybDy';">
-        <img src="assets/images/lichess.svg" alt="Lichess Logo" onclick="window.location='https://lichess.org/team/olympic-college-chess-club';">
+        <img src="assets/svg/discord.svg" alt="Discord Logo" onclick="window.location='https://discord.gg/9DFTseybDy';">
+        <img src="assets/svg/lichess.svg" alt="Lichess Logo" onclick="window.location='https://lichess.org/team/olympic-college-chess-club';">
     </div>
     <h2> Try the Lichess Puzzle of the Day!</h2>
     <iframe id="puzzle" src="https://lichess.org/training/frame?theme=blue2&bg=dark" allowtransparency="true" frameborder="0"></iframe>
